--- a/src/package.json
+++ b/src/package.json
@@ -27,7 +27,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "http://www.opensource.org/licenses/mit-license.php",
+      "url": "http://www.opensource.org/licenses/mit-license.php"
     }
   ],
   "repositories": [
